objects/Order.object
<CustomObject>
    <fields>
        <fullName>Contact_Billing_Adress__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Billing Adress</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grid_Billing_End_Date__c</fullName>
        <formula>Contract.EndDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grid_Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grid_Company_Code__c</fullName>
        <defaultValue>&quot;IT70&quot;</defaultValue>
        <label>Company Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grid_Condition_Terms__c</fullName>
        <formula>TEXT(Contract.Grid_Condition_Terms__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Condition Terms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grid_CorrelationId__c</fullName>
        <externalId>true</externalId>
        <label>CorrelationId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grid_CurrencyCountry__c</fullName>
        <formula>TEXT(Opportunity.Grid_CurrencyCountry__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grid_CurrencySymbol__c</fullName>
        <formula>Contract.vlocity_cmt__QuoteId__r.Grid_CurrencySymbol__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency Symbol</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grid_Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grid_Delivery_Plant__c</fullName>
        <defaultValue>&quot;ITIA&quot;</defaultValue>
        <label>Delivery Plant</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grid_Distribution_Channel__c</fullName>
        <defaultValue>&quot;DZ&quot;</defaultValue>
        <label>Distribution Channel</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grid_Division__c</fullName>
        <defaultValue>&quot;M1&quot;</defaultValue>
        <label>Division</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grid_EffectiveOneTimeTotal__c</fullName>
        <label>Effective One Time Total</label>
        <summarizedField>OrderItem.vlocity_cmt__EffectiveOneTimeTotal__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Grid_EffectiveRecurringTotal__c</fullName>
        <label>Effective Recurring Total</label>
        <summarizedField>OrderItem.vlocity_cmt__EffectiveRecurringTotal__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Grid_EffectiveTotalRecurringCosts_Yearly__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Effective Total: Recurring Costs Yearly</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grid_Effective_Recurring_Total_Yearly__c</fullName>
        <label>Effective Recurring Total Yearly</label>
        <summarizedField>OrderItem.Grid_EffectiveRecurringTotalYearly__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Grid_Error_Code__c</fullName>
        <label>Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grid_Error_Description__c</fullName>
        <label>Error Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Grid_Expected_Gross_Margin__c</fullName>
        <formula>Grid_Order_Total_Price__c -  Grid_Order_Total_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Gross Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grid_Expected_Gross_Margin_percentage__c</fullName>
        <formula>( Grid_Order_Total_Price__c -  Grid_Order_Total_Cost__c )/ Grid_Order_Total_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Gross Margin (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Grid_Expected_Mark_up_percentage__c</fullName>
        <formula>( Grid_Order_Total_Price__c -  Grid_Order_Total_Cost__c )/ Grid_Order_Total_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Mark up (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Grid_Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grid_LogNo__c</fullName>
        <label>LogNo</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grid_MonthTotalCharge__c</fullName>
        <label>Month Total Charge</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grid_MonthTotalCost__c</fullName>
        <label>Month Total Cost</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grid_OneTimeMarginTotal__c</fullName>
        <formula>IF( Grid_EffectiveOneTimeTotal__c &gt; 0, ((Grid_EffectiveOneTimeTotal__c -   vlocity_cmt__EffectiveOneTimeCostTotal__c ) / Grid_EffectiveOneTimeTotal__c) * 100, IF(vlocity_cmt__EffectiveOneTimeCostTotal__c  &gt; 0, ((Grid_EffectiveOneTimeTotal__c - vlocity_cmt__EffectiveOneTimeCostTotal__c ) / vlocity_cmt__EffectiveOneTimeCostTotal__c ) * 100, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One Time Margin Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grid_OneTimeTotal__c</fullName>
        <label>One Time Total</label>
        <summarizedField>OrderItem.vlocity_cmt__OneTimeTotal__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Grid_OrderTotal__c</fullName>
        <formula>( Grid_EffectiveRecurringTotal__c  *   Opportunity.Grid_NumberOfContractedMonths__c ) +  Grid_EffectiveOneTimeTotal__c  + (  Grid_Effective_Recurring_Total_Yearly__c  * (Opportunity.Grid_NumberOfContractedMonths__c / 12))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grid_Order_Key__c</fullName>
        <label>Order Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grid_Order_Sub_Status__c</fullName>
        <label>Order Sub Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grid_Order_Total_Cost__c</fullName>
        <label>Order Total Costs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grid_Order_Total_Price__c</fullName>
        <label>Order Total Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grid_Order_Transmission_Date__c</fullName>
        <label>Order Transmission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grid_ParentContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Sub Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grid_PurchaseOrder__c</fullName>
        <label>Purchase Order</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grid_RecurringMarginTotalYearly__c</fullName>
        <formula>IF( Grid_Effective_Recurring_Total_Yearly__c &gt; 0,((Grid_Effective_Recurring_Total_Yearly__c -  Grid_EffectiveTotalRecurringCosts_Yearly__c ) / Grid_Effective_Recurring_Total_Yearly__c) * 100, IF(Grid_EffectiveTotalRecurringCosts_Yearly__c &gt; 0 , ((Grid_Effective_Recurring_Total_Yearly__c - Grid_EffectiveTotalRecurringCosts_Yearly__c) / Grid_EffectiveTotalRecurringCosts_Yearly__c) * 100, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recurring Margin Total Yearly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grid_RecurringMarginTotal__c</fullName>
        <formula>IF( Grid_EffectiveRecurringTotal__c &gt; 0, ((Grid_EffectiveRecurringTotal__c -  vlocity_cmt__EffectiveRecurringCostTotal__c ) / Grid_EffectiveRecurringTotal__c) * 100, IF(vlocity_cmt__EffectiveRecurringCostTotal__c  &gt; 0, ((Grid_EffectiveRecurringTotal__c - vlocity_cmt__EffectiveRecurringCostTotal__c ) / vlocity_cmt__EffectiveRecurringCostTotal__c ) * 100, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recurring Margin Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grid_Recurring_Margin_Total_Yearly__c</fullName>
        <label>Recurring Margin Total Yearly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grid_Recurring_Margin_Yearly__c</fullName>
        <label>Recurring Margin Yearly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grid_Recurring_Total__c</fullName>
        <label>Recurring Total</label>
        <summarizedField>OrderItem.vlocity_cmt__RecurringTotal__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Grid_Result__c</fullName>
        <label>Result</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Grid_SAP_OrderId__c</fullName>
        <label>SAP OrderId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grid_Sales_Doc_Type__c</fullName>
        <defaultValue>&quot;ZOMA&quot;</defaultValue>
        <label>Sales Doc Type</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grid_Sales_Org__c</fullName>
        <defaultValue>&quot;IT70&quot;</defaultValue>
        <label>Sales Org</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grid_Substatus__c</fullName>
        <label>Callout Response</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>KO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grid_isOrder__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AccountId__c</fullName>
        <description>Formula: Value of the AccountId field.</description>
        <formula>AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AccountRecordType__c</fullName>
        <formula>Account.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AccountSLA__c</fullName>
        <formula>TEXT(Account.vlocity_cmt__vSLA__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account SLA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AsyncJobId__c</fullName>
        <description>This stores asynchronous job Id if any jobs running on this order.</description>
        <inlineHelpText>This stores asynchronous job Id if any jobs running on this order.</inlineHelpText>
        <label>Async Job</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AsyncOperation__c</fullName>
        <description>This stores the asynchronous operation name for which this order is locked.</description>
        <inlineHelpText>This stores the asynchronous operation name for which this order is locked.</inlineHelpText>
        <label>Async Operation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Validate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__BillingName__c</fullName>
        <description>Text to enter billing contact</description>
        <label>Billing Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CampaignId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CartContextValues__c</fullName>
        <description>The field is used to store context value of the order.</description>
        <label>Cart Context Values</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CartIdentifier__c</fullName>
        <externalId>true</externalId>
        <label>Cart Identifier</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CreatedByAPI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created By API</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CreditCheckDecision__c</fullName>
        <description>Stores the result of the credit check.</description>
        <label>Credit Check Decision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Accepted-Reference</fullName>
                </value>
                <value>
                    <fullName>Accept-Deposit</fullName>
                </value>
                <value>
                    <fullName>Accepted-Upsell</fullName>
                </value>
                <value>
                    <fullName>Accepted-Downsale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CustomerOriginatedById__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact on the order’s account who originated the order</description>
        <label>Customer Originated By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DefaultBillingAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Billing Account Orders</relationshipLabel>
        <relationshipName>BillingAccountOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DefaultCurrencyPaymentMode__c</fullName>
        <label>Default Currency Payment Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Currency</fullName>
                    <default>true</default>
                    <label>Currency</label>
                </value>
                <value>
                    <fullName>Loyalty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DefaultPremisesId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The default Premises associated with this order</description>
        <label>Premises</label>
        <referenceTo>vlocity_cmt__Premises__c</referenceTo>
        <relationshipLabel>Premises Orders</relationshipLabel>
        <relationshipName>PremisesOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DefaultServiceAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The default Service Account associated with this Order</description>
        <label>Service Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Account Orders</relationshipLabel>
        <relationshipName>ServiceAccountOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DefaultServicePointId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The default Service Point associated with this order</description>
        <label>Service Point</label>
        <referenceTo>vlocity_cmt__ServicePoint__c</referenceTo>
        <relationshipLabel>Service Point Orders</relationshipLabel>
        <relationshipName>ServicePointOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DeliveryMethod__c</fullName>
        <description>Identifies the method of delivery for the order.</description>
        <label>Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Store</fullName>
                    <default>true</default>
                    <label>In Store</label>
                </value>
                <value>
                    <fullName>Store Pickup</fullName>
                </value>
                <value>
                    <fullName>Standard Shipping</fullName>
                </value>
                <value>
                    <fullName>Premium Shipping</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Delivery_Installation_Status__c</fullName>
        <label>Delivery Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Discount__c</fullName>
        <description>Manual discount for entire order</description>
        <label>Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DueDate__c</fullName>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveBaseOneTimeCharge__c</fullName>
        <description>Roll up of the one-time charges of the order items before applying adjustments.</description>
        <label>Effective Total: Base One Time Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveBaseRecurringCharge__c</fullName>
        <description>Roll up of the recurring charges of the order items before applying adjustments.</description>
        <label>Effective Total: Base Recurring Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveOneTimeCostTotal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Effective Total: One Time Costs</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveOneTimeLoyaltyTotal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Effective Total: One Time Loyalty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveOneTimeTotal__c</fullName>
        <label>Effective Total: One Time Charges</label>
        <summarizedField>OrderItem.vlocity_cmt__EffectiveOneTimeTotal__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveOrderTotal__c</fullName>
        <formula>vlocity_cmt__EffectiveOneTimeTotal__c +  vlocity_cmt__Tax__c  +( vlocity_cmt__EffectiveRecurringTotal__c *  vlocity_cmt__NumberOfContractedMonths__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Order Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveRecurringCostTotal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Effective Total: Recurring Costs</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveRecurringTotal__c</fullName>
        <label>Effective Total: Monthly Charges</label>
        <summarizedField>OrderItem.vlocity_cmt__EffectiveRecurringTotal__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveUsageCostTotal__c</fullName>
        <description>Effective Usage Cost Total</description>
        <label>Usage Cost Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveUsagePriceTotal__c</fullName>
        <description>Effective Usage Price Total</description>
        <label>Usage Price Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EnterpriseOrderId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Enterprise order from which master order is created</description>
        <label>Enterprise Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Enterprise Order</relationshipLabel>
        <relationshipName>EnterpriseOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ExpirationDate__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ExternalPricingStatus__c</fullName>
        <description>This field is to keep track of external pricing status.</description>
        <label>External Pricing Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Ready</fullName>
                    <default>true</default>
                    <label>Not Ready</label>
                </value>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Request Confirmed</fullName>
                </value>
                <value>
                    <fullName>Invalidated</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FirstSubmitAttemptTs__c</fullName>
        <description>Date of First Submission to Order Management</description>
        <inlineHelpText>Date of First Submission to Order Management</inlineHelpText>
        <label>First Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FirstVersionOrderIdentifier__c</fullName>
        <label>Original Order Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ForceSupplementals__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is an internal flag used to accept Order changes post PONR</description>
        <label>Force Supplementals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FrameContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Frame contract linked to this order</description>
        <label>Frame Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FulfilmentStatus__c</fullName>
        <description>The summary fulfilment status of this order. Populated and updated by order management processes for submitted orders.</description>
        <inlineHelpText>Fulfilment Status</inlineHelpText>
        <label>Fulfillment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Activated</fullName>
                </value>
                <value>
                    <fullName>Superseded</fullName>
                </value>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActiveOrderVersion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the current order is the one that is active in Order Management System.</description>
        <label>Active Order Version</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsChangesAccepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Changes Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsChangesAllowed__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Changes Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsContractRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes if order requires a contract</description>
        <label>Require Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsPriced__c</fullName>
        <formula>NOT(ISNULL(vlocity_cmt__LastPricedAt__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Priced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsSyncing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Syncing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsValidated__c</fullName>
        <formula>NOT(ISNULL(vlocity_cmt__ValidationDate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__JeopardySafetyIntervalUnit__c</fullName>
        <defaultValue>&quot;Seconds&quot;</defaultValue>
        <label>Jeopardy Safety Interval Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Seconds</fullName>
                    <default>true</default>
                    <label>Seconds</label>
                </value>
                <value>
                    <fullName>Business Hours</fullName>
                </value>
                <value>
                    <fullName>Business Days</fullName>
                </value>
                <value>
                    <fullName>Calendar Hours</fullName>
                </value>
                <value>
                    <fullName>Calendar Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__JeopardySafetyInterval__c</fullName>
        <label>Jeopardy Safety Interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__JeopardyStatus__c</fullName>
        <formula>IF(
                ISBLANK(vlocity_cmt__RequestedCompletionDate__c) || ISNULL(vlocity_cmt__RequestedCompletionDate__c) || ISBLANK(vlocity_cmt__DueDate__c) || ISNULL(vlocity_cmt__DueDate__c),
                    &apos;Green&apos;,
                    IF(
                        vlocity_cmt__DueDate__c &gt;= vlocity_cmt__RequestedCompletionDate__c,
                            &apos;Red&apos;,
                            IF(
                                vlocity_cmt__JeopardySafetyInterval__c &lt;= 0,
                                &apos;Green&apos;,
                                CASE(vlocity_cmt__JeopardySafetyIntervalUnit__c,
                                    &apos;Seconds&apos;, IF(vlocity_cmt__DueDate__c + (vlocity_cmt__JeopardySafetyInterval__c/(24*60*60)) &lt;= vlocity_cmt__RequestedCompletionDate__c, &apos;Green&apos;, &apos;Yellow&apos;),
                                    &apos;Calendar Hours&apos;, IF(vlocity_cmt__DueDate__c + (vlocity_cmt__JeopardySafetyInterval__c/24) &lt;= vlocity_cmt__RequestedCompletionDate__c, &apos;Green&apos;, &apos;Yellow&apos;),
                                    &apos;Calendar Days&apos;, IF(vlocity_cmt__DueDate__c + vlocity_cmt__JeopardySafetyInterval__c &lt;= vlocity_cmt__RequestedCompletionDate__c, &apos;Green&apos;, &apos;Yellow&apos;),
                                    /* TODO: Gap - business intervals doesn&apos;t support business calendar */
                                    &apos;Business Hours&apos;, IF(vlocity_cmt__DueDate__c + (vlocity_cmt__JeopardySafetyInterval__c/24) &lt;= vlocity_cmt__RequestedCompletionDate__c, &apos;Green&apos;, &apos;Yellow&apos;),
                                    &apos;Business Days&apos;, IF(vlocity_cmt__DueDate__c + vlocity_cmt__JeopardySafetyInterval__c &lt;= vlocity_cmt__RequestedCompletionDate__c, &apos;Green&apos;, &apos;Yellow&apos;),
                                &apos;Green&apos;)
                            )
                    )
            )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jeopardy Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LastPricedAt__c</fullName>
        <label>Last Priced At</label>
        <type>DateTime</type>
    </fields>
</CustomObject>